fix(Carousel): adjust input alignment in `.legend_and_controls` for better visual consistency

--- a/components/Carousel/Carousel.module.scss
+++ b/components/Carousel/Carousel.module.scss
@@ -148,6 +148,10 @@
     align-items: center;
     display: flex;
     gap: 8px;
+
+    input {
+      translate: 0 1.5px;
+    }
   }
 
   .controls {
